Refactor Calcular class to use getFirst() method for improved readability